# projects

ai-foundations/: README.md  pyproject.toml
ai-foundations/ai_foundations/attention/: __init__.py  attention.py  modules.py  post_process_attention.py  qkv.py
ai-foundations/ai_foundations/embeddings/: __init__.py  load_gemma_embeddings.py  plot_embeddings_dimensions.py  plot_embeddings_tsne.py
ai-foundations/ai_foundations/feedback/: utils.py
ai-foundations/ai_foundations/generation/: __init__.py  gemma.py  generate.py  loaders.py
ai-foundations/ai_foundations/machine_learning/: __init__.py  mlp.py
ai-foundations/ai_foundations/ngram/: __init__.py  model.py
ai-foundations/ai_foundations/tokenization/: __init__.py  bpe_tokenizer.py
ai-foundations/ai_foundations/training/: __init__.py  callbacks.py  losses.py  model.py
ai-foundations/ai_foundations/transformers/: __init__.py  layers.py
ai-foundations/course_1/: gdm_lab_1_1_create_your_own_probability_distribution.ipynb  gdm_lab_1_3_compare_n_gram_models_and_transformer_language_models.ipynb  gdm_lab_1_4_prepare_the_dataset_for_training_a_slm.ipynb  gdm_lab_1_5_train_your_own_small_language_model.ipynb
ai-foundations/course_2/: gdm_lab_2_1_preprocess_data.ipynb  gdm_lab_2_2_tokenize_texts_into_characters_and_words.ipynb  gdm_lab_2_3_tokenize_texts_into_subword_tokens.ipynb  gdm_lab_2_4_implement_a_bpe_tokenizer.ipynb  gdm_lab_2_5_experiment_with_embeddings.ipynb  gdm_lab_2_6_train_an_slm_with_your_bpe_tokenizer.ipynb
ai-foundations/course_3/: gdm_lab_3_1_distinguish_between_signal_and_noise.ipynb  gdm_lab_3_2_make_predictions_with_a_single_layer_neural_network.ipynb  gdm_lab_3_3_separate_more_complex_data.ipynb  gdm_lab_3_4_design_your_own_mlp.ipynb  gdm_lab_3_5_tune_hyperparameters.ipynb  gdm_lab_3_6_mitigate_overfitting.ipynb  gdm_lab_3_7_gradients.ipynb  gdm_lab_3_8_train_your_model_with_keras.ipynb
ai-foundations/course_4/: gdm_lab_4_1_attention_visualization.ipynb  gdm_lab_4_2_implement_attention_equation.ipynb  gdm_lab_4_3_implement_attention_equation_2.ipynb  gdm_lab_4_4_positional_embeddings.ipynb  gdm_lab_4_5_reflection_on_trainable_parameters.ipynb
log_classifier/: README.md  environment.yml  pyproject.toml
log_classifier/tests/: __init__.py  test_generation.py
(+63 files in other folders)
